[project]
name = "client_personal_account"
version = "0.1.0"
description = "\"\""
authors = [
    {name = "Gavrilova_Natalia"}
]
license = {text = "''"}
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0"
black = {version = "^23.0", extras = ["d", "python2"]}
isort = "^5.0"
mypy = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.extras]
lint = ["flake8", "black", "isort", "mypy"]

[tool.black]
line-length = 79  # Изменили длину строки на 79
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119
